Fixing Cornerbadge on Mobile

--- a/Styles/career.css
+++ b/Styles/career.css
@@ -141,11 +141,12 @@ ul {
     .cornerbadge a {
         width: 100%;
         text-align: center;
+        padding: 0px;
         padding-top: 30px;
         padding-bottom: 30px;
         font-size: 30px;
-    }
 
+    }
     .rightmenu {
         display: flex;
         flex-direction: row-reverse;
